--- a/quantitativeinvestmentlesson1.ipynb
+++ b/quantitativeinvestmentlesson1.ipynb
@@ -474,6 +474,107 @@
         "id": "qiGnR7uZxWnv"
       },
       "id": "qiGnR7uZxWnv"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Pillars or tiers of support** when talking about the design of pension systems. Social Security is a first pillar and is designed to provide minimal support for most citizens. The second pillar, consisting of work-related pensions, includes (2) and (3), which capture the bulk of retirement savings in the United States."
+      ],
+      "metadata": {
+        "id": "H7iiibA6xqbr"
+      },
+      "id": "H7iiibA6xqbr"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The third pillar is private voluntary savings, which is (4), but it also includes non-tax advantaged savings used in retirement. And finally there is now a fourth pillar: if retirement savings are inadequate, (great-) grandma may have no choice but to go back to work."
+      ],
+      "metadata": {
+        "id": "VCzysExgxrDv"
+      },
+      "id": "VCzysExgxrDv"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### <font color='MediumVioletRed' style=\"font-size:20px\"><b>Foundations and Endownments</b></font>"
+      ],
+      "metadata": {
+        "id": "GDwSGS6jxr-A"
+      },
+      "id": "GDwSGS6jxr-A"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Like the SWFs, **foundations and endowments** generally set (flexible) spending rules based on some proportion of AUM. Private\n",
+        "foundations are required to pay out at least 5% of AUM every year, a figure established by the Tax Reform Act of 1969."
+      ],
+      "metadata": {
+        "id": "b0orqllMxtI_"
+      },
+      "id": "b0orqllMxtI_"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Although the law frames this as a minimum, in practice many foundations simply pay out 5% regardless of other considerations. University endowments are not subject to the 5% minimum, but endowments spend at about that rate anyway and only slowly vary through time."
+      ],
+      "metadata": {
+        "id": "gkhISTprxuFM"
+      },
+      "id": "gkhISTprxuFM"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Money given as donations to endowments is often for a specific purpose. Harvard has the largest university endowment, at $\\$30.7$ billion as of June 30, 2012."
+      ],
+      "metadata": {
+        "id": "Vh2c2GpNxu9j"
+      },
+      "id": "Vh2c2GpNxu9j"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "But **only 17% is unrestricted**. The remainder has temporary restrictions (64%), or is permanently restricted (19%). If these restrictions are not adhered to, donors may sue for return of their money—as the Robertson family did in accusing Princeton of mismanaging their gift."
+      ],
+      "metadata": {
+        "id": "6C2dDc5jxwFB"
+      },
+      "id": "6C2dDc5jxwFB"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Originally intended to educate students at Princeton’s Woodrow Wilson School for careers in government, the Robertson family, heirs to a fortune from the A&P supermarket chain, donated $\\$35$ million in 1961."
+      ],
+      "metadata": {
+        "id": "bEPZKNwHxw4c"
+      },
+      "id": "bEPZKNwHxw4c"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The family was dismayed to learn that the funds were used to teach students going into all sorts of careers except government (“advanced study, the teaching profession, college administration, private business, journalism, law, medicine, and music”)."
+      ],
+      "metadata": {
+        "id": "rLy59Ai1xyO_"
+      },
+      "id": "rLy59Ai1xyO_"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thanks to Princeton’s talented investment managers, the money grew to roughly $\\$900$ million. Princeton settled in December 2008, right before trial, and the terms required Princeton to pay all of the Robertson Foundation’s substantial legal fees ($\\$40$ million), and give the Robertson family $\\$50$ million to launch a new foundation to carry out the original intent of the gift."
+      ],
+      "metadata": {
+        "id": "MYTe28Ksxzwf"
+      },
+      "id": "MYTe28Ksxzwf"
     }
   ],
   "metadata": {
