--- a/quantitativeinvestmentlesson1.ipynb
+++ b/quantitativeinvestmentlesson1.ipynb
@@ -575,6 +575,329 @@
         "id": "MYTe28Ksxzwf"
       },
       "id": "MYTe28Ksxzwf"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### <font color='MediumVioletRed' style=\"font-size:20px\"><b>Rich individuals and families</b></font>"
+      ],
+      "metadata": {
+        "id": "xtJmuTJOfJof"
+      },
+      "id": "xtJmuTJOfJof"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Cornelius Vanderbilt (1794–1877), known as the “Commodore,” was born rich, created even more wealth, and amassed a fortune of more than $\\$100$ billion in today’s dollars, enough to make him the richest person in the world."
+      ],
+      "metadata": {
+        "id": "w2TR49LmfLgb"
+      },
+      "id": "w2TR49LmfLgb"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "His heirs lived the high life, squandering their inherited wealth on yachts, enormous estates, grand parties, and whatever took their fancy. In two generations, they had burned through all of it.  "
+      ],
+      "metadata": {
+        "id": "TGlGetcafSb0"
+      },
+      "id": "TGlGetcafSb0"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Several descendants died penniless, and “when 120 of the Commodore’s descendants gathered at Vanderbilt University in 1973 for their first family reunion, there was not a millionaire among them."
+      ],
+      "metadata": {
+        "id": "Es3nBTdhfTt4"
+      },
+      "id": "Es3nBTdhfTt4"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The absolutely filthy rich sometimes form family offices, which manage family assets much like endowments. Some family offices serve multiple families and even manage nonfamily money."
+      ],
+      "metadata": {
+        "id": "U7aJS19PfWJr"
+      },
+      "id": "U7aJS19PfWJr"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Capgemini and RBC Wealth Management estimate that high-net worth individuals controlled $\\$42$ trillion in assets in 2012. For comparison, the total market capitalization of stocks listed on the NYSE was around $\\$14$ trillion."
+      ],
+      "metadata": {
+        "id": "Th48H4BifbPa"
+      },
+      "id": "Th48H4BifbPa"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Approximately half of the wealth resides in the United States and Europe, but Asia is furiously churning out millionaires at the fastest rate. Banks and other intermediaries are eyeing these enormous sums through their private wealth management divisions (Nikola Vasiljevic, your teacher, works in one of these), but they face competition from stand-alone asset management firms."
+      ],
+      "metadata": {
+        "id": "RtQak5VRffAa"
+      },
+      "id": "RtQak5VRffAa"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### <font color='MediumVioletRed' style=\"font-size:20px\"><b>The rest of us</b></font>"
+      ],
+      "metadata": {
+        "id": "_u0l0wtFfxiT"
+      },
+      "id": "_u0l0wtFfxiT"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The net worth of the household sector in the United States was $\\$66.1$ trillion at December 2012. This wealth is highly skewed: the richest 1% owned 35%, the richest 5% own 62%, and the richest 10% owned 75%. Now even more scewed as a result of internet wealth concentration and corona."
+      ],
+      "metadata": {
+        "id": "RaezVl8cfzhF"
+      },
+      "id": "RaezVl8cfzhF"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The richest 1% includes the ultrarich whom we discussed before, but also include many who would call themselves (upper) middle class. This skewness has become more pronounced over time; the poor are getting (relatively) poorer and the rich are getting (relatively) richer."
+      ],
+      "metadata": {
+        "id": "JT8dVA7uf0qJ"
+      },
+      "id": "JT8dVA7uf0qJ"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The top 1% took home 9% of total income in 1976, and 20% in 2011. We are back to the same levels of inequality the United States experienced during and before the 1930s."
+      ],
+      "metadata": {
+        "id": "bBzwuVKLf1zH"
+      },
+      "id": "bBzwuVKLf1zH"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The middle class has the same main concern as the other asset owners discussed up to now: to save more today so that tomorrow we can eat (retirement) or that our children can eat (bequests), even though we also need to worry about eating today."
+      ],
+      "metadata": {
+        "id": "IwgA8DzZgIUx"
+      },
+      "id": "IwgA8DzZgIUx"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We must be especially mindful of the fees paid to intermediaries because the fees represent foregone consumption: since we are not rolling in dough, consumption matters more for us than the rich."
+      ],
+      "metadata": {
+        "id": "X5yWlf0lgL2K"
+      },
+      "id": "X5yWlf0lgL2K"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "There are several additional considerations the rich don’t have to worry about (or that the rich worry about less):"
+      ],
+      "metadata": {
+        "id": "6sJMOlsOgM2_"
+      },
+      "id": "6sJMOlsOgM2_"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Labor income <br><br>The biggest asset is not financial; it is human capital. We should invest according to our total wealth, which is the sum of financial and human capital\n",
+        "wealth."
+      ],
+      "metadata": {
+        "id": "dFSNG-dQia6i"
+      },
+      "id": "dFSNG-dQia6i"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Leverage<br><br>Borrowing enables us to smooth consumption, but leverage leads to increased risk. Housing, the largest asset position for individuals, is typically highly levered and also highly illiquid. Leverage is a short position in bonds, and so the middle class is highly exposed to interest rate risk (or duration risk)."
+      ],
+      "metadata": {
+        "id": "7SEiW5FWibuJ"
+      },
+      "id": "7SEiW5FWibuJ"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Health care and schooling"
+      ],
+      "metadata": {
+        "id": "rcbQCa93ifRj"
+      },
+      "id": "rcbQCa93ifRj"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## <font color='orange' style=\"font-size:25px\"><b>Investment process</b></font>"
+      ],
+      "metadata": {
+        "id": "6bUWKMtlkFaD"
+      },
+      "id": "6bUWKMtlkFaD"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "An investor’s portfolio is investor's collection of investment assets. Once the portfolio is established, investor may periodically\n",
+        "\n",
+        "* update or “rebalance” by selling existing securities and using the proceeds to purchase new securities\n",
+        "\n",
+        "* increase or decrease the size of the portfolio\n",
+        "\n",
+        "Investment assets:  stocks, bonds, real estate, commodities, and so on."
+      ],
+      "metadata": {
+        "id": "PkKI7ZT4k7mZ"
+      },
+      "id": "PkKI7ZT4k7mZ"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Top-down** portfolio construction starts with asset allocation.\n",
+        "\n",
+        "* Asset allocation (select among broad asset classes). The first decision: how much money to put into safe asset (risk-free) and how much into risky assets. Establishes broad features of a portfolio.\n",
+        "\n",
+        "* Security selection (select individual securities within an asset class). Fine-tuning."
+      ],
+      "metadata": {
+        "id": "q3DK8__XlF-v"
+      },
+      "id": "q3DK8__XlF-v"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Asset allocation choice depends to a large extent on investor preferences i.e. risk aversion (see below). Stocks have much higher expected returns than T-bills, but are much riskier too.\n",
+        "\n",
+        "**Security analysis**: valuation of particular securities that might be included in the portfolio. For example, an investor might ask whether Moderna or Pfizer is more attractively priced. Both bonds and stocks must be evaluated for investment attractiveness, but valuation is far more difficult for stocks because a stock’s performance usually is far more\n",
+        "sensitive to the condition of the issuing firm."
+      ],
+      "metadata": {
+        "id": "X9NRoLrIlJcy"
+      },
+      "id": "X9NRoLrIlJcy"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Bottom-up** strategy: pick stocks that seem attractively priced without as much concern for the resultant asset allocation. Such a technique can result in unintended bets on one or another sector of the economy.\n",
+        "\n",
+        "For example, it might turn out that the portfolio ends up with a very heavy representation of firms in one industry, from one part of the country, or with exposure to one source of uncertainty. However, a bottom-up strategy does focus the portfolio on the assets that seem to offer the most attractive investment opportunities."
+      ],
+      "metadata": {
+        "id": "YflkpVt-lYQU"
+      },
+      "id": "YflkpVt-lYQU"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A scientific basis for fund management top-down approach was initiated in 1952 when Harry Markowitz — subsequently, an Economics Nobel Prize laureate—published his paper, ‘Portfolio Selection’, which begins as follows:"
+      ],
+      "metadata": {
+        "id": "-0J0B43AlyEx"
+      },
+      "id": "-0J0B43AlyEx"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\"The process of selecting a portfolio may be divided into two stages.\n",
+        "\n",
+        "- The first stage starts with observation and experience and ends with beliefs about future performances of available securities.\n",
+        "\n",
+        "- The second stage starts with the relevant beliefs of future performance and ends with the choice of portfolio. The paper is concerned with the second stage.\""
+      ],
+      "metadata": {
+        "id": "_J71aD8Ll2qO"
+      },
+      "id": "_J71aD8Ll2qO"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The first stage is far harder, and there is never a definitive solution. Predicting the future is difficult in most situations, but particularly so for asset prices in financial markets, which are notoriously erratic."
+      ],
+      "metadata": {
+        "id": "uDZPmzqOmMG1"
+      },
+      "id": "uDZPmzqOmMG1"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Indeed, the ‘efficient markets hypothesis’, accepted by some economists, postulates that all information relevant to systematic prediction is already ‘priced in’ to today’s market, leaving only ‘white noise’ as the future. If true, no active fund management makes any sense."
+      ],
+      "metadata": {
+        "id": "tSaYHOKBmW7Y"
+      },
+      "id": "tSaYHOKBmW7Y"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Traders, on the other hand, seek to take advantage of market anomalies to make arbitrage profits, an enterprise that would be impossible in an efficient market."
+      ],
+      "metadata": {
+        "id": "RjAxHP8EmzQp"
+      },
+      "id": "RjAxHP8EmzQp"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The difficulties of the first stage do not mean that nothing can be\n",
+        "done in relation to the second stage. The beliefs about future\n",
+        "performances will include acceptance that the future is grossly\n",
+        "uncertain. In this course we discuss various strategies that mitigate the risks of unfavourable scenarios and take advantage of favourable ones."
+      ],
+      "metadata": {
+        "id": "Q-0PYeidm-mp"
+      },
+      "id": "Q-0PYeidm-mp"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Below we develop some simple models that are aimed to give us intuition regarding optimal portfolio allocation from a theoretical perspective. For simplicity we consider just a single period of time and a fixed amount of money that we have for investment."
+      ],
+      "metadata": {
+        "id": "NQQA8ofum_nN"
+      },
+      "id": "NQQA8ofum_nN"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# <font color='tomato' style=\"font-size:40px\"><center><b>01b. Intro to portfolio optimization</b></center></font>"
+      ],
+      "metadata": {
+        "id": "buMutB1CnCX9"
+      },
+      "id": "buMutB1CnCX9"
     }
   ],
   "metadata": {
