--- a/quantitativeinvestmentlesson1.ipynb
+++ b/quantitativeinvestmentlesson1.ipynb
@@ -949,11 +949,11 @@
         "%pip install plotly"
       ],
       "metadata": {
-        "id": "ql4OFhxonUGM",
-        "outputId": "5f01289a-8501-4ccb-d227-3fb45d7abee2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ql4OFhxonUGM",
+        "outputId": "5f01289a-8501-4ccb-d227-3fb45d7abee2"
       },
       "id": "ql4OFhxonUGM",
       "execution_count": 1,
@@ -985,11 +985,11 @@
         "%pip install sympy"
       ],
       "metadata": {
-        "id": "WM-pm8wBncJI",
-        "outputId": "55b56946-82fb-4985-9c9d-8192ff33aa67",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WM-pm8wBncJI",
+        "outputId": "55b56946-82fb-4985-9c9d-8192ff33aa67"
       },
       "id": "WM-pm8wBncJI",
       "execution_count": 2,
@@ -1027,12 +1027,12 @@
         "uploaded0 = files.upload()"
       ],
       "metadata": {
-        "id": "DMF90ERfnife",
-        "outputId": "29d59a10-521b-41c0-817d-c0745f81b224",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 73
-        }
+        },
+        "id": "DMF90ERfnife",
+        "outputId": "29d59a10-521b-41c0-817d-c0745f81b224"
       },
       "id": "DMF90ERfnife",
       "execution_count": 6,
@@ -1417,12 +1417,12 @@
         "EU_1"
       ],
       "metadata": {
-        "id": "4sDcTm_Mousx",
-        "outputId": "e6b9700c-c6af-4373-fbfc-f1f77f8760df",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 37
-        }
+        },
+        "id": "4sDcTm_Mousx",
+        "outputId": "e6b9700c-c6af-4373-fbfc-f1f77f8760df"
       },
       "id": "4sDcTm_Mousx",
       "execution_count": 12,
@@ -1457,12 +1457,12 @@
         "EU_2"
       ],
       "metadata": {
-        "id": "07NXIjw0pZSM",
-        "outputId": "8486e108-9944-490e-f063-7c5e24f4183d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 37
-        }
+        },
+        "id": "07NXIjw0pZSM",
+        "outputId": "8486e108-9944-490e-f063-7c5e24f4183d"
       },
       "id": "07NXIjw0pZSM",
       "execution_count": 10,
@@ -1675,12 +1675,12 @@
         "prob_nat"
       ],
       "metadata": {
-        "id": "6_W1o79Op-0e",
-        "outputId": "7c504281-09aa-48ab-d4fb-d919b6edf8b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "id": "6_W1o79Op-0e",
+        "outputId": "7c504281-09aa-48ab-d4fb-d919b6edf8b8"
       },
       "id": "6_W1o79Op-0e",
       "execution_count": 14,
@@ -1715,11 +1715,11 @@
         "ps1"
       ],
       "metadata": {
-        "id": "CaZl8kEZqccN",
-        "outputId": "2e6dda36-7d6b-4578-b4b7-3b11c189691f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CaZl8kEZqccN",
+        "outputId": "2e6dda36-7d6b-4578-b4b7-3b11c189691f"
       },
       "id": "CaZl8kEZqccN",
       "execution_count": 15,
@@ -1762,12 +1762,12 @@
         "fd.tree(fd.bin_evolution(50,[1.2,0.8],1), fd.bin_evolution(1,[1.03,1.03],1),space=0.25, fs=(500,500))"
       ],
       "metadata": {
-        "id": "NPdSdqlUquWu",
-        "outputId": "ce6a6d3f-6006-430f-88cc-2ce01f2b4438",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 517
-        }
+        },
+        "id": "NPdSdqlUquWu",
+        "outputId": "ce6a6d3f-6006-430f-88cc-2ce01f2b4438"
       },
       "id": "NPdSdqlUquWu",
       "execution_count": 19,
@@ -1831,12 +1831,12 @@
         "W1"
       ],
       "metadata": {
-        "id": "-vJ0cfNXrvq_",
-        "outputId": "7c2a3ef9-24e0-49f3-f635-9b051460e0bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 58
-        }
+        },
+        "id": "-vJ0cfNXrvq_",
+        "outputId": "7c2a3ef9-24e0-49f3-f635-9b051460e0bc"
       },
       "id": "-vJ0cfNXrvq_",
       "execution_count": 25,
@@ -1884,12 +1884,12 @@
         "W1.applyfunc(sp.log) #this is the method calculating log of wealth W1 in sympy"
       ],
       "metadata": {
-        "id": "AgR5Y0UEsWcX",
-        "outputId": "450c1630-5e75-4ec2-f59e-12bb89853316",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 58
-        }
+        },
+        "id": "AgR5Y0UEsWcX",
+        "outputId": "450c1630-5e75-4ec2-f59e-12bb89853316"
       },
       "id": "AgR5Y0UEsWcX",
       "execution_count": 26,
@@ -1926,12 +1926,12 @@
         "EU"
       ],
       "metadata": {
-        "id": "Rr86IQ32sltQ",
-        "outputId": "7682e479-b8cc-404e-a8fc-597ade491b2c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "id": "Rr86IQ32sltQ",
+        "outputId": "7682e479-b8cc-404e-a8fc-597ade491b2c"
       },
       "id": "Rr86IQ32sltQ",
       "execution_count": 27,
@@ -1966,12 +1966,12 @@
         "FOC"
       ],
       "metadata": {
-        "id": "GKbjC2pDs9Hn",
-        "outputId": "fb7ecd80-61b4-4d9f-c9e8-38c2046ca276",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        }
+        },
+        "id": "GKbjC2pDs9Hn",
+        "outputId": "fb7ecd80-61b4-4d9f-c9e8-38c2046ca276"
       },
       "id": "GKbjC2pDs9Hn",
       "execution_count": 28,
@@ -1998,12 +1998,12 @@
         "ns_opt"
       ],
       "metadata": {
-        "id": "Yo5MrdJBtIDu",
-        "outputId": "60bbee70-7d1c-4aea-b357-40be0c4e2bd6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 37
-        }
+        },
+        "id": "Yo5MrdJBtIDu",
+        "outputId": "60bbee70-7d1c-4aea-b357-40be0c4e2bd6"
       },
       "id": "Yo5MrdJBtIDu",
       "execution_count": 30,
@@ -2037,12 +2037,12 @@
         "ps0*ns_opt"
       ],
       "metadata": {
-        "id": "AXhzihImtSVR",
-        "outputId": "5cd90e23-2083-483e-9125-e18c1a547173",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 37
-        }
+        },
+        "id": "AXhzihImtSVR",
+        "outputId": "5cd90e23-2083-483e-9125-e18c1a547173"
       },
       "id": "AXhzihImtSVR",
       "execution_count": 31,
@@ -2076,12 +2076,12 @@
         "W0 - ps0*ns_opt"
       ],
       "metadata": {
-        "id": "oTlAYv7ytXFb",
-        "outputId": "f8002843-d202-424d-8a12-5f443f609a01",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 37
-        }
+        },
+        "id": "oTlAYv7ytXFb",
+        "outputId": "f8002843-d202-424d-8a12-5f443f609a01"
       },
       "id": "oTlAYv7ytXFb",
       "execution_count": 32,
@@ -2148,6 +2148,342 @@
         "id": "Jzy3Wt36uGIL"
       },
       "id": "Jzy3Wt36uGIL"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$W_1=W_0(1 + r)+ n_s\\,p_{s0}\\, \\frac{(p_{s1} - p_{s0})}{p_{s0}} - n_s\\,p_{s0}\\,r$$"
+      ],
+      "metadata": {
+        "id": "wx2R2n3Qukvb"
+      },
+      "id": "wx2R2n3Qukvb"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Simple return on stock is $r_s$:"
+      ],
+      "metadata": {
+        "id": "dgmR9QjOumG7"
+      },
+      "id": "dgmR9QjOumG7"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$r_s=\\frac{(p_{s1} - p_{s0})}{p_{s0}}$$"
+      ],
+      "metadata": {
+        "id": "zNX8kSbdumzX"
+      },
+      "id": "zNX8kSbdumzX"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We now introduce new variable $w_{s0}$ which represents the amount of money invested into risky asset:"
+      ],
+      "metadata": {
+        "id": "sPCyMuQpuoQB"
+      },
+      "id": "sPCyMuQpuoQB"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$w_{s0}=n_{s}\\,p_{s0}$$"
+      ],
+      "metadata": {
+        "id": "PsrF4fVYupyi"
+      },
+      "id": "PsrF4fVYupyi"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thus, in this notation $W_1$ reads:"
+      ],
+      "metadata": {
+        "id": "UNBISdJKuqxR"
+      },
+      "id": "UNBISdJKuqxR"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$W_1=W_0(1 + r)+ w_{s0}\\, r_s - w_{s0}\\,r = W_0(1 + r) + w_{s0} (r_s - r)$$"
+      ],
+      "metadata": {
+        "id": "kYYZfmRUusNL"
+      },
+      "id": "kYYZfmRUusNL"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$W_1$ differs from the risk-free amount $W_0 (1+r)$ by the product of the amount of money invested in risky stock, $w_{s0}$, and the excess return on risky stock $(r_s-r)$. The expected utility would, thus, read:"
+      ],
+      "metadata": {
+        "id": "Tmr5QfaWuub4"
+      },
+      "id": "Tmr5QfaWuub4"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$\\mathbb{E}u=\\mathbb{E}(u(W_0(1 + r)+ w_{s0} (r_s - r)))$$"
+      ],
+      "metadata": {
+        "id": "WySkvX_juvMH"
+      },
+      "id": "WySkvX_juvMH"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now the decision variable would be the **amount of money invested into the risky asset** $w_{s0}$. Clearly, once we find $w_{s0}$, we could immediately determine the optimal number of risky stocks:"
+      ],
+      "metadata": {
+        "id": "dFWjX59Vu0AT"
+      },
+      "id": "dFWjX59Vu0AT"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$n_s=\\frac{w_{s0}}{p_{s0}}$$"
+      ],
+      "metadata": {
+        "id": "AdZ7DFCqu0wJ"
+      },
+      "id": "AdZ7DFCqu0wJ"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### <font color='MediumVioletRed' style=\"font-size:20px\"><b>Continuation of the numerical example</b></font>"
+      ],
+      "metadata": {
+        "id": "gid1_mavu1sD"
+      },
+      "id": "gid1_mavu1sD"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In order to utilize this form of the portfolio optimization problem, let us find first the returns on risky stock $r_s$. Since gross returns are $u$ and $d$, net returns in the two states of nature are:"
+      ],
+      "metadata": {
+        "id": "TjMPjvQsu3T1"
+      },
+      "id": "TjMPjvQsu3T1"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculating net stock returns starting from the gross stock returns\n",
+        "rs=np.array([u,d])-1\n",
+        "rs"
+      ],
+      "metadata": {
+        "id": "-IDWasFVu2cS",
+        "outputId": "7ff1cec8-644b-4375-f2a8-42adb26e7ebe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "-IDWasFVu2cS",
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0.2, -0.2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Possible wealth at time 1 now reads:"
+      ],
+      "metadata": {
+        "id": "wlte9L6RvB7S"
+      },
+      "id": "wlte9L6RvB7S"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Wealth invested into risky asset\n",
+        "ws0 = sp.Symbol('w_s0')\n",
+        "#portfolio wealth at time 1\n",
+        "W1= sp.Matrix(W0*(1+r)+ws0*(rs-r))\n",
+        "W1"
+      ],
+      "metadata": {
+        "id": "SiUQSwsAu72F",
+        "outputId": "1238b122-41bc-4083-98cc-46ed2c9a593a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        }
+      },
+      "id": "SiUQSwsAu72F",
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "⎡0.17⋅wₛ₀ + 1030.0⎤\n",
+              "⎢                 ⎥\n",
+              "⎣1030.0 - 0.23⋅wₛ₀⎦"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}0.17 w_{s0} + 1030.0\\\\1030.0 - 0.23 w_{s0}\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "while the expected utility is now given by:"
+      ],
+      "metadata": {
+        "id": "WcSYy-vZzGHz"
+      },
+      "id": "WcSYy-vZzGHz"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "EU=(prob_nat@W1.applyfunc(sp.log))[0]\n",
+        "EU"
+      ],
+      "metadata": {
+        "id": "QJdraUchzG8w",
+        "outputId": "cdcfded8-513d-4615-d04e-114c00e38610",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        }
+      },
+      "id": "QJdraUchzG8w",
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.4⋅log(1030.0 - 0.23⋅wₛ₀) + 0.6⋅log(0.17⋅wₛ₀ + 1030.0)"
+            ],
+            "text/latex": "$\\displaystyle 0.4 \\log{\\left(1030.0 - 0.23 w_{s0} \\right)} + 0.6 \\log{\\left(0.17 w_{s0} + 1030.0 \\right)}$"
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In order to maximize our utility, we need to invest into the risky asset the following amount of money:"
+      ],
+      "metadata": {
+        "id": "YoU_NJxYvXzu"
+      },
+      "id": "YoU_NJxYvXzu"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "FOC = sp.diff(EU,ws0)\n",
+        "FOC"
+      ],
+      "metadata": {
+        "id": "j4ObfTOqvYYH",
+        "outputId": "0d1ca978-4833-4d9d-c7ce-e8a6ac39b1d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        }
+      },
+      "id": "j4ObfTOqvYYH",
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "      0.102               0.092      \n",
+              "───────────────── - ─────────────────\n",
+              "0.17⋅wₛ₀ + 1030.0   1030.0 - 0.23⋅wₛ₀"
+            ],
+            "text/latex": "$\\displaystyle \\frac{0.102}{0.17 w_{s0} + 1030.0} - \\frac{0.092}{1030.0 - 0.23 w_{s0}}$"
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ws0_opt=sp.solve(FOC,ws0)[0]\n",
+        "ws0_opt\n"
+      ],
+      "metadata": {
+        "id": "DZLloPuQvfEp",
+        "outputId": "8632f3d5-2562-47a9-d3c0-6294e00ccb45",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        }
+      },
+      "id": "DZLloPuQvfEp",
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "263.427109974425"
+            ],
+            "text/latex": "$\\displaystyle 263.427109974425$"
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Not surprisingly, we obtained the same answer as before. This implies that we would need to invest 26.3 per cent of our 1000 euros into stock and the rest into riskless asset."
+      ],
+      "metadata": {
+        "id": "XuqR4at5vePs"
+      },
+      "id": "XuqR4at5vePs"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "It turns out that we can obtain optimal fraction directly (the third way of expressing the optimization problem). This is what we do next."
+      ],
+      "metadata": {
+        "id": "2C_OZw6zzXYS"
+      },
+      "id": "2C_OZw6zzXYS"
     }
   ],
   "metadata": {
