--- a/quantitativeinvestmentlesson1.ipynb
+++ b/quantitativeinvestmentlesson1.ipynb
@@ -2287,11 +2287,11 @@
         "rs"
       ],
       "metadata": {
-        "id": "-IDWasFVu2cS",
-        "outputId": "7ff1cec8-644b-4375-f2a8-42adb26e7ebe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-IDWasFVu2cS",
+        "outputId": "7ff1cec8-644b-4375-f2a8-42adb26e7ebe"
       },
       "id": "-IDWasFVu2cS",
       "execution_count": 33,
@@ -2328,12 +2328,12 @@
         "W1"
       ],
       "metadata": {
-        "id": "SiUQSwsAu72F",
-        "outputId": "1238b122-41bc-4083-98cc-46ed2c9a593a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 58
-        }
+        },
+        "id": "SiUQSwsAu72F",
+        "outputId": "1238b122-41bc-4083-98cc-46ed2c9a593a"
       },
       "id": "SiUQSwsAu72F",
       "execution_count": 34,
@@ -2370,12 +2370,12 @@
         "EU"
       ],
       "metadata": {
-        "id": "QJdraUchzG8w",
-        "outputId": "cdcfded8-513d-4615-d04e-114c00e38610",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "id": "QJdraUchzG8w",
+        "outputId": "cdcfded8-513d-4615-d04e-114c00e38610"
       },
       "id": "QJdraUchzG8w",
       "execution_count": 43,
@@ -2410,12 +2410,12 @@
         "FOC"
       ],
       "metadata": {
-        "id": "j4ObfTOqvYYH",
-        "outputId": "0d1ca978-4833-4d9d-c7ce-e8a6ac39b1d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        }
+        },
+        "id": "j4ObfTOqvYYH",
+        "outputId": "0d1ca978-4833-4d9d-c7ce-e8a6ac39b1d9"
       },
       "id": "j4ObfTOqvYYH",
       "execution_count": 44,
@@ -2442,12 +2442,12 @@
         "ws0_opt\n"
       ],
       "metadata": {
-        "id": "DZLloPuQvfEp",
-        "outputId": "8632f3d5-2562-47a9-d3c0-6294e00ccb45",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 37
-        }
+        },
+        "id": "DZLloPuQvfEp",
+        "outputId": "8632f3d5-2562-47a9-d3c0-6294e00ccb45"
       },
       "id": "DZLloPuQvfEp",
       "execution_count": 45,
@@ -2484,6 +2484,16 @@
         "id": "2C_OZw6zzXYS"
       },
       "id": "2C_OZw6zzXYS"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### <font color='MediumVioletRed' style=\"font-size:20px\"><b>Optimization using fraction of money invested into the risky asset</b></font>"
+      ],
+      "metadata": {
+        "id": "Npthn0Wz6k7s"
+      },
+      "id": "Npthn0Wz6k7s"
     }
   ],
   "metadata": {
