--- a/exercises-1-inv.ipynb
+++ b/exercises-1-inv.ipynb
@@ -204,7 +204,7 @@
         "id": "DezNwo_JEbpO"
       },
       "id": "DezNwo_JEbpO",
-      "execution_count": 12,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -231,7 +231,7 @@
         "id": "Z8IWryuNEmFc"
       },
       "id": "Z8IWryuNEmFc",
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -241,14 +241,14 @@
         "rs"
       ],
       "metadata": {
-        "id": "BGay3x4MEwpG",
-        "outputId": "ca0f1e71-5da3-4255-9cc4-6f04f7b4a907",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BGay3x4MEwpG",
+        "outputId": "4a720110-055e-4e59-db08-223b2a1bd1b7"
       },
       "id": "BGay3x4MEwpG",
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -258,7 +258,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 4
         }
       ]
     },
@@ -281,15 +281,15 @@
         "a"
       ],
       "metadata": {
-        "id": "pjl-a4L2GCBB",
-        "outputId": "217ee79b-84de-4b0e-daa3-3c16e72dbea7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "id": "pjl-a4L2GCBB",
+        "outputId": "ebced9d4-9176-497f-9081-066c8cd5251c"
       },
       "id": "pjl-a4L2GCBB",
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -300,7 +300,7 @@
             "text/latex": "$\\displaystyle \\alpha$"
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 5
         }
       ]
     },
@@ -323,14 +323,14 @@
         "W1"
       ],
       "metadata": {
-        "id": "4SeIDYvmGUdH",
-        "outputId": "b2f7003f-9556-45e7-98f4-f81f565a16aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4SeIDYvmGUdH",
+        "outputId": "e99e9165-9d82-4181-c533-0cf1497b95b9"
       },
       "id": "4SeIDYvmGUdH",
-      "execution_count": 14,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -340,7 +340,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 6
         }
       ]
     },
@@ -361,15 +361,15 @@
         "W1"
       ],
       "metadata": {
-        "id": "8CLAxaY2Gphe",
-        "outputId": "38001310-1ab0-4597-d20b-084556227b2e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 58
-        }
+        },
+        "id": "8CLAxaY2Gphe",
+        "outputId": "73c01316-59c5-4bc6-d091-b3ac50c796b9"
       },
       "id": "8CLAxaY2Gphe",
-      "execution_count": 16,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -382,7 +382,7 @@
             "text/latex": "$\\displaystyle \\left[\\begin{matrix}2500.0 \\alpha + 10500.0\\\\10500.0 - 3500.0 \\alpha\\end{matrix}\\right]$"
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 7
         }
       ]
     },
@@ -404,15 +404,15 @@
         "W1**0.5"
       ],
       "metadata": {
-        "id": "w5moG649GxjE",
-        "outputId": "74753e09-75aa-41da-9bf5-068a39d455bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 321
-        }
+        },
+        "id": "w5moG649GxjE",
+        "outputId": "dec50a8c-2114-4be2-c059-21489e75b422"
       },
       "id": "w5moG649GxjE",
-      "execution_count": 23,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "error",
@@ -421,7 +421,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNonSquareMatrixError\u001b[0m                      Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-23-5b6279df4384>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mW1\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-8-5b6279df4384>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mW1\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/sympy/core/decorators.py\u001b[0m in \u001b[0;36mbinary_op_wrapper\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m    104\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m                         \u001b[0;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 106\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    107\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mbinary_op_wrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    108\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mpriority_decorator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/sympy/matrices/common.py\u001b[0m in \u001b[0;36m__pow__\u001b[0;34m(self, exp)\u001b[0m\n\u001b[1;32m   2778\u001b[0m         \u001b[0;34m\"\"\"Return self**exp a scalar or symbol.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2779\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2780\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2781\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2782\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/sympy/matrices/common.py\u001b[0m in \u001b[0;36mpow\u001b[0;34m(self, exp, method)\u001b[0m\n\u001b[1;32m   2803\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'No such method'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2804\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrows\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcols\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2805\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mNonSquareMatrixError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2806\u001b[0m         \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2807\u001b[0m         \u001b[0mjordan_pow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'_matrix_pow_by_jordan_blocks'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -449,15 +449,15 @@
         "U"
       ],
       "metadata": {
-        "id": "H1JykTwAHm2g",
-        "outputId": "3146da04-9653-436d-f03b-dae124985c09",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 62
-        }
+        },
+        "id": "H1JykTwAHm2g",
+        "outputId": "686fc80d-7adf-4b30-9796-2072e08c3972"
       },
       "id": "H1JykTwAHm2g",
-      "execution_count": 24,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -470,7 +470,7 @@
             "text/latex": "$\\displaystyle \\left[\\begin{matrix}102.469507659596 \\left(0.238095238095238 \\alpha + 1\\right)^{0.5}\\\\102.469507659596 \\left(1 - 0.333333333333333 \\alpha\\right)^{0.5}\\end{matrix}\\right]$"
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 9
         }
       ]
     },
@@ -523,15 +523,15 @@
         "p"
       ],
       "metadata": {
-        "id": "mnTbNDi4H1iq",
-        "outputId": "a69cc36c-995e-46f2-c82d-0471a5493ab5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "id": "mnTbNDi4H1iq",
+        "outputId": "f7d01c8c-b710-4bd3-feaa-27be7e6fc52a"
       },
       "id": "mnTbNDi4H1iq",
-      "execution_count": 25,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -542,7 +542,7 @@
             "text/latex": "$\\displaystyle \\left[\\begin{matrix}0.5 & 0.5\\end{matrix}\\right]$"
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 10
         }
       ]
     },
@@ -563,15 +563,15 @@
         "EU"
       ],
       "metadata": {
-        "id": "wN1mB0rJIMx9",
-        "outputId": "4b1639ce-2242-4b39-92dc-9c2bcb4cc052",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 39
-        }
+        },
+        "id": "wN1mB0rJIMx9",
+        "outputId": "e66aa6c0-389b-4d28-b79c-6e7060cdbc8a"
       },
       "id": "wN1mB0rJIMx9",
-      "execution_count": 29,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -582,7 +582,7 @@
             "text/latex": "$\\displaystyle 51.234753829798 \\left(1 - 0.333333333333333 \\alpha\\right)^{0.5} + 51.234753829798 \\left(0.238095238095238 \\alpha + 1\\right)^{0.5}$"
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 11
         }
       ]
     },
@@ -625,15 +625,15 @@
         "a_opt"
       ],
       "metadata": {
-        "id": "28ZLCphaIrk9",
-        "outputId": "57e0d6b8-fec2-4d81-cb76-7685b2b71457",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 37
-        }
+        },
+        "id": "28ZLCphaIrk9",
+        "outputId": "ddebb6c7-9ee2-4551-f68e-c9b87ca79549"
       },
       "id": "28ZLCphaIrk9",
-      "execution_count": 33,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -644,7 +644,7 @@
             "text/latex": "$\\displaystyle -1.2$"
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 12
         }
       ]
     },
@@ -665,15 +665,15 @@
         "1-a_opt"
       ],
       "metadata": {
-        "id": "-m1acXwuItdF",
-        "outputId": "61c6bd5c-2424-487d-ae70-d2fb205e8735",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 37
-        }
+        },
+        "id": "-m1acXwuItdF",
+        "outputId": "b4b78894-6a78-49da-a645-e4dc313c9c0f"
       },
       "id": "-m1acXwuItdF",
-      "execution_count": 34,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -684,7 +684,7 @@
             "text/latex": "$\\displaystyle 2.2$"
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 13
         }
       ]
     },
@@ -725,15 +725,15 @@
         "W1_s"
       ],
       "metadata": {
-        "id": "f-qOH-BwJzIs",
-        "outputId": "cc8fded2-3943-4a2e-db52-40ebac6eba42",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 37
-        }
+        },
+        "id": "f-qOH-BwJzIs",
+        "outputId": "d8f43b40-522e-4677-eee8-c15dcaec1003"
       },
       "id": "f-qOH-BwJzIs",
-      "execution_count": 36,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -744,9 +744,126 @@
             "text/latex": "$\\displaystyle -12000.0$"
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 14
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### C"
+      ],
+      "metadata": {
+        "id": "SiiEWRMHmIZa"
+      },
+      "id": "SiiEWRMHmIZa"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "c) Calculate absolute risk aversion of such investor:"
+      ],
+      "metadata": {
+        "id": "hQF9b8admJSj"
+      },
+      "id": "hQF9b8admJSj"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- $A$ - measures how risk averse is investor\n",
+        "- $A=f(W)$ - $A$ is function of $W$ and show us how we behave when we experience change in our wealth"
+      ],
+      "metadata": {
+        "id": "hxfkq1-omL1g"
+      },
+      "id": "hxfkq1-omL1g"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$A(W) = - \\frac{u''(W)}{u'(W)}$$"
+      ],
+      "metadata": {
+        "id": "QW_dKadjmMlm"
+      },
+      "id": "QW_dKadjmMlm"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Step 1**\n",
+        "- Define utility funcion as symbolic expression:\n",
+        "- We need symbolic variable for $W$"
+      ],
+      "metadata": {
+        "id": "0pbwwVyEmNfO"
+      },
+      "id": "0pbwwVyEmNfO"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "W=sp.Symbol('W', real=True)\n",
+        "U= W**0.5"
+      ],
+      "metadata": {
+        "id": "EGSXo2BkmOWo"
+      },
+      "id": "EGSXo2BkmOWo",
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Step 2**\n",
+        "- Compute A:"
+      ],
+      "metadata": {
+        "id": "vOfjCYTumdjB"
+      },
+      "id": "vOfjCYTumdjB"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A= -U.diff(W,2)/U.diff(W)\n",
+        "A"
+      ],
+      "metadata": {
+        "id": "KZSqPcrhmgCz",
+        "outputId": "a8b553ae-4dd4-4ea2-843e-1e4a85026d2b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
+      },
+      "id": "KZSqPcrhmgCz",
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5/W**1.0"
+            ],
+            "text/latex": "$\\displaystyle \\frac{0.5}{W^{1.0}}$"
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$\\frac{0.5}{W}$"
+      ],
+      "metadata": {
+        "id": "CBNiX2xsmzmo"
+      },
+      "id": "CBNiX2xsmzmo"
     }
   ],
   "metadata": {
